Peer review fixes - Btn visibility

--- a/Assets/SCSS/main.scss
+++ b/Assets/SCSS/main.scss
@@ -394,8 +394,8 @@ main {
                     background: #c3cbe8;
                     border: 0;
                     font-size: 1.2rem;
-                    color: $textPrimary;
-                    text-shadow: 0 0 3px $shadowDark;
+                    color: rgb(100, 100, 100);
+                    text-shadow: 0 0 1px $shadowDark;
                     padding: 7px;
                     border-radius: 15px;
                     text-transform: uppercase;
